--- a/package.json
+++ b/package.json
@@ -11,21 +11,14 @@
     "@types/node": "^12.20.6",
     "@types/react": "^16.14.5",
     "@types/react-dom": "^16.9.11",
-    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
-    "@types/redux": "^3.6.0",
-    "@types/redux-thunk": "^2.1.0",
     "lodash": "^4.17.21",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^16.14.0",
-    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "typescript": "^3.9.9",
-    "web-vitals": "^0.2.4"
+    "typescript": "^3.9.9"
   },
   "scripts": {
     "start": "react-scripts start",
