--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
+    "react-to-print": "^2.12.6",
     "typescript": "^3.9.9"
   },
   "scripts": {
